Fixed flag visibility

--- a/frontend-quizzy/src/pages/Quiz/Quiz.css
+++ b/frontend-quizzy/src/pages/Quiz/Quiz.css
@@ -77,6 +77,7 @@
   .flag-button:hover {
     transform: scale(1.4);
     cursor: pointer;
+    color: orange;
   }
 
   .timer-content {
